--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"highlight.js": "^11.8.0"
+	}
 }
